NLP TP/texts/robotics/robotics.stackexchange_0000068424.txt
Q:

Problems Building from Source

Hello everyone! I'm trying to build Jade from source, and I have run into a problem, likely python related. It builds several packages successfully, then fails at python_orocos_kdl:
<== Finished processing package [37 of 223]: 'pr2_description'

==> Processing plain cmake package: 'python_orocos_kdl'
==> Building with env: '/opt/ros/jade/env.sh'
Makefile exists, skipping explicit cmake invocation...
==> make cmake_check_build_system in '/home/allenh1/catkin_ws/build_isolated/python_orocos_kdl/install'
==> make -j8 -l8 in '/home/allenh1/catkin_ws/build_isolated/python_orocos_kdl/install'
[ 11%] Building CXX object CMakeFiles/python_module_PyKDL.dir/PyKDL/sipPyKDLpart7.o
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip: In function ‘int convertTo_std_string(PyObject*, void**, int*, PyObject*)’:
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip:41:37: error: ‘PyString_Check’ was not declared in this scope
         return (PyString_Check(sipPy) || PyUnicode_Check(sipPy));
                                     ^
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip:48:58: error: ‘PyString_AS_STRING’ was not declared in this scope
         *sipCppPtr = new std::string(PyString_AS_STRING(s));
                                                          ^
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip:52:30: error: ‘PyString_Check’ was not declared in this scope
      if (PyString_Check(sipPy)) {
                              ^
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip:53:62: error: ‘PyString_AS_STRING’ was not declared in this scope
         *sipCppPtr = new std::string(PyString_AS_STRING(sipPy));
                                                              ^
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip: In function ‘PyObject* convertFrom_std_string(void*, PyObject*)’:
/home/allenh1/catkin_ws/src/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL/std_string.sip:30:56: error: ‘PyString_FromString’ was not declared in this scope
         newstring = PyString_FromString(sipCpp->c_str());
                                                        ^
CMakeFiles/python_module_PyKDL.dir/build.make:243: recipe for target 'CMakeFiles/python_module_PyKDL.dir/PyKDL/sipPyKDLpart7.o' failed
make[2]: *** [CMakeFiles/python_module_PyKDL.dir/PyKDL/sipPyKDLpart7.o] Error 1
CMakeFiles/Makefile2:60: recipe for target 'CMakeFiles/python_module_PyKDL.dir/all' failed
make[1]: *** [CMakeFiles/python_module_PyKDL.dir/all] Error 2
Makefile:116: recipe for target 'all' failed
make: *** [all] Error 2
<== Failed to process package 'python_orocos_kdl': 
  Command '['/opt/ros/jade/env.sh', 'make', '-j8', '-l8']' returned non-zero exit status 2

Reproduce this error by running:
==> cd /home/allenh1/catkin_ws/build_isolated/python_orocos_kdl && /opt/ros/jade/env.sh make -j8 -l8

Command failed, exiting.

I am building with the following command.
$ sudo PYTHONPATH="/opt/ros/jade/lib64/python3.3/site-packages/" ./src/catkin/bin/catkin_make_isolated --install --install-space /opt/ros/jade -DSETUPTOOLS_DEB_LAYOUT=OFF

No packages can build, for some reason, unless I explicitly add the PYTHONPATH variable as seen above. Any suggestions as to how I can get this working?
Thanks in advance.

Update: I have roscore up and running!

I was even able to build something I wrote in Qt for controlling a robot.

But I cannot do anything else until I get the rest to build... I'm creating a Gentoo install guide for Jade.

Originally posted by allenh1 on ROS Answers with karma: 3055 on 2015-07-02
Post score: 0

A:

I have an answer! The issue falls from the adaptation of Python3. Running the following worked to fix this.
$ cd ~/ros_catkin_ws/orocos_kinematics_dynamics/python_orocos_kdl/PyKDL
$ rm -f ./std_string.sip
$ wget https://raw.githubusercontent.com/orocos/orocos_kinematics_dynamics/master/python_orocos_kdl/PyKDL/std_string.sip

This allows several more things to build. Now up to 117/223 building for desktop_full on Gentoo..

Originally posted by allenh1 with karma: 3055 on 2015-07-09
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by jacksonkr_ on 2015-12-10:
I was so excited that I found this answer! But unfortunately it doesn't help in my situation as the orocos_kinematics_dynamics folder does not exist :( osx 10.11.1
Comment by allenh1 on 2016-01-12:
Hey! Sorry - been a little busy lately. What is your specific issue on OS X?
Comment by jacksonkr_ on 2016-01-12:
That was long enough ago that the details are fuzzy. My biggest issue is that I'm running El Capitan (OS X 10.11). I have ubuntu on a separate machine so that may be my best bet. I'm excited for you that you have this working though!
Comment by 0xbot on 2019-11-02:
This issue got resolved by installing sip for python 2.7: https://fredrikaverpil.github.io/2015/11/25/compiling-pyqt5-for-python-2-7-on-os-x/

